简化了MoveFix